test/e2e/testdata/credential-injection-backend-filter.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: credential-injection
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - path:
        value: "/foo"
    backendRefs:
    - name: infra-backend-v1
      port: 8080
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.envoyproxy.io
          kind: HTTPRouteFilter
          name: credential-injection-1
  - matches:
    - path:
        value: "/bar"
    backendRefs:
    - name: infra-backend-v1
      port: 8080
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.envoyproxy.io
          kind: HTTPRouteFilter
          name: credential-injection-2
  - matches:
    - path:
        value: "/baz"
    backendRefs:
    - name: infra-backend-v1
      port: 8080

---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: HTTPRouteFilter
metadata:
  name: credential-injection-1
  namespace: gateway-conformance-infra
spec:
  credentialInjection:
    credential:
      valueRef:
        name: credential-1
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: HTTPRouteFilter
metadata:
  name: credential-injection-2
  namespace: gateway-conformance-infra
spec:
  credentialInjection:
    header: x-credential
    overwrite: true
    credential:
      valueRef:
        name: credential-2
---
apiVersion: v1
kind: Secret
metadata:
  name: credential-1
  namespace: gateway-conformance-infra
data:
  credential: QmFzaWMgZFhObGNqRTZkR1Z6ZERFPQ==
---
apiVersion: v1
kind: Secret
metadata:
  name: credential-2
  namespace: gateway-conformance-infra
data:
  credential: QmFzaWMgZFhObGNqRTZkR1Z6ZERJPQ==
